src/main/java/com/example/guestbook/global/error/BaseError.java
package com.example.guestbook.global.error;

import org.springframework.http.HttpStatus;

public interface BaseError {
    HttpStatus getHttpStatus();
    String getCode();
    String getMessage();
}
